chore: update index.html

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 <a href="#roadmap">Roadmap</a>
                 <a href="#pricing">Pricing</a>
                 <a href="https://github.com/russellmiller3/enact">GitHub</a>
-                <a href="#" class="nav-cta">Start free trial →</a>
+                <a href="mailto:hello@enact.cloud?subject=Cloud Waitlist" class="nav-cta">Join Cloud Waitlist →</a>
             </nav>
         </div>
     </div>
@@ -527,10 +527,10 @@
             Enact is an action firewall for AI agents. Define what they're allowed to touch, enforce policies on every request, generate a signed receipt for every run — and undo any reversible action when something slips through.
         </p>
         <div class="cta-row">
-            <a href="#" class="btn btn-primary">Start free trial →</a>
-            <a href="#quickstart" class="btn btn-secondary">pip install enact-sdk</a>
+            <a href="#quickstart" class="btn btn-primary">pip install enact-sdk</a>
+            <a href="mailto:hello@enact.cloud?subject=Cloud Waitlist" class="btn btn-secondary">Join Cloud Waitlist →</a>
         </div>
-        <p class="hero-note">Open source · <a class="auto-style-1" href="https://enact.cloud">enact.cloud</a> · Self-host free · Cloud from $299/mo</p>
+        <p class="hero-note">Open source · <a class="auto-style-1" href="https://enact.cloud">enact.cloud</a> · Self-host free · Cloud coming soon</p>
 
         <div class="auto-style-2">
             <p class="auto-style-3">Minimal setup — add to any agent in minutes</p>
@@ -1367,7 +1367,7 @@ result, receipt = enact.<span class="fn">run</span>(
                     <li><span class="fi fi-check">✓</span> <span>Rollback (<code class="auto-style-91">enact.rollback(run_id)</code>)</span></li>
                     <li><span class="fi fi-check">✓</span> Email support (24hr response)</li>
                 </ul>
-                <a href="#" class="pricing-btn primary">Start free trial →</a>
+                <a href="mailto:hello@enact.cloud?subject=Cloud Waitlist" class="pricing-btn primary">Join Waitlist →</a>
                 <p class="auto-style-92">No credit card required</p>
             </div>
 
@@ -1416,8 +1416,8 @@ result, receipt = enact.<span class="fn">run</span>(
         <h2>Know exactly what your agents did.<br>And prove it.</h2>
         <p>Try Enact locally in 5 minutes, or start with Cloud for free.</p>
         <div class="cta-row">
-            <a href="#" class="btn btn-primary">Start free trial →</a>
-            <a href="https://github.com/russellmiller3/enact" class="btn btn-secondary">pip install enact-sdk</a>
+            <a href="https://github.com/russellmiller3/enact" class="btn btn-primary">pip install enact-sdk</a>
+            <a href="mailto:hello@enact.cloud?subject=Cloud Waitlist" class="btn btn-secondary">Join Cloud Waitlist →</a>
         </div>
     </div>
 </section>
